[gd_scene load_steps=3 format=3 uid="uid://b3dr60j30wwxu"]

[ext_resource type="Script" uid="uid://ksj73vg3vfbj" path="res://scripts/menu/main_menu.gd" id="1_c2fhx"]
[ext_resource type="Texture2D" uid="uid://dtyuf4oohobib" path="res://assets/flip_dungeon_wllpaper.png" id="2_e23ap"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c2fhx")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_e23ap")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.0
offset_top = 43.0
offset_right = 82.0
offset_bottom = 66.0
grow_horizontal = 2
text = "FLIP DECK DUNGEON"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
text = "Gold: 0"
horizontal_alignment = 2

[node name="DevResetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = 95.0
grow_horizontal = 0
text = "Development: Reset Progress"

[node name="DevAddGoldButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 135.0
grow_horizontal = 0
text = "Development: Add Gold"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -19.5
offset_right = 107.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Continue"

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "PLay"

[node name="EndlessButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Endless"

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Tutorial"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Shop"

[node name="CollectionButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Collection"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Settings"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_p_lay_pressed"]
[connection signal="pressed" from="VBoxContainer/TutorialButton" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="VBoxContainer/CollectionButton" to="." method="_on_collection_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
